<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <TextView
        android:layout_width="440dp"
        android:layout_height="52dp"
        android:background="#4E24E6"
        android:gravity="center_vertical"
        android:paddingBottom="16dp"
        android:shadowColor="@color/white"
        android:text="@string/hamburgueriaz"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorLink="@android:color/white"
        android:textSize="16sp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/hamb"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="224dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="16dp"
            android:text="@string/fa_a_seu_pedido"
            android:textAllCaps="true"
            android:textColor="#5D4037"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="396dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="260dp"
            android:autofillHints=""
            android:hint="@string/nome"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/checkBoxBacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="304dp"
            android:text="@string/bacon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkBoxQueijo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="352dp"
            android:text="@string/queijo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="400dp"
            android:text="@string/onion_rings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="448dp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:paddingBottom="16dp"
            android:text="@string/quantidade"
            android:textAllCaps="true"
            android:textColor="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="224dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="552dp"
            android:padding="16dp"
            android:text="@string/resumo_do_pedido"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtResumo"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="592dp"
            android:minHeight="200dp"
            android:padding="16dp"
            android:paddingBottom="200dp"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnmais"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="496dp"
            android:backgroundTint="#4230BF"
            android:onClick="aumentar"
            android:padding="0dp"
            android:text="+"
            android:textColorLink="#673AB7"
            app:cornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/txtQuantidade"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="496dp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:paddingBottom="16dp"
            android:text="@string/_0"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/btnmenos"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="496dp"
            android:backgroundTint="#382AAD"
            android:onClick="diminuir"
            android:padding="0dp"
            android:text="-"
            app:cornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="740dp"
            android:backgroundTint="#3135B6"
            android:onClick="enviarPedido"
            android:padding="12dp"
            android:shadowColor="#593F3F"
            android:text="@string/fazer_pedido"
            android:textAllCaps="true"
            app:cornerRadius="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>